--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ notes/.obsidian/workspace.json
 notes/.obsidian/appearance.json
 notes/.obsidian/app.json
 notes/.obsidian/core-plugins.json
+assignnments/part2/phonebook/db.json
+assignnments/part2/phonebook/db.json
