--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ notes/.obsidian/app.json
 notes/.obsidian/core-plugins.json
 assignnments/part2/phonebook/db.json
 assignnments/part2/phonebook/db.json
+*node_modules*
