--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ assignnments/part2/phonebook/db.json
 assignnments/part2/phonebook/db.json
 *node_modules*
 *dist*
+assignnments/part3/phonebook/backend/.env
