--- a/assignnments/part3/phonebook/backend/package.json
+++ b/assignnments/part3/phonebook/backend/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "build:ui": "rm -rf dist && cd ../frontend && npm install && npm run build && cp -r dist ../backend",
-    "deploy:full": "npm install && npm run build:ui && git config --global user.name 'John Server' && git add . && git commit -m uibuild && git push"
+    "build:ui": "npm install && rm -rf dist && cd ../frontend && npm install && npm run build && cp -r dist ../backend",
+    "deploy:full": "npm run build:ui && git config --global user.name 'John Server' && git add . && git commit -m uibuild && git push"
   },
   "author": "Janne Wald",
   "license": "ISC",
