--- a/assignnments/part3/phonebook/backend/package.json
+++ b/assignnments/part3/phonebook/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "build:ui": "npm install && rm -rf dist && cd ../frontend && npm install && npm run build && cp -r dist ../backend",
-    "deploy:full": "npm run build:ui && git config --global user.name 'John Server' && git add . && git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && git config --global user.name 'John Server' && git add . && git commit -m uibuild && git push",
+    "lint": "eslint ."
   },
   "author": "Janne Wald",
   "license": "ISC",
@@ -18,5 +19,12 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.2",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0"
   }
 }
