--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ assignnments/part2/phonebook/db.json
 *node_modules*
 *dist*
 assignnments/part3/phonebook/backend/.env
+assignnments/part4/bloglist/backend/.env
