--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ assignnments/part2/phonebook/db.json
 *dist*
 assignnments/part3/phonebook/backend/.env
 assignnments/part4/bloglist/backend/.env
+assignnments/part6/redux-anecdotes/db.json
