--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ assignnments/part2/phonebook/db.json
 assignnments/part3/phonebook/backend/.env
 assignnments/part4/bloglist/backend/.env
 assignnments/part6/redux-anecdotes/db.json
+assignnments/part6/query-anecdotes/db.json
