--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ assignnments/part3/phonebook/backend/.env
 assignnments/part4/bloglist/backend/.env
 assignnments/part6/redux-anecdotes/db.json
 assignnments/part6/query-anecdotes/db.json
+assignnments/part6/query-anecdotes/db.json
