--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ assignnments/part4/bloglist/backend/.env
 assignnments/part6/redux-anecdotes/db.json
 assignnments/part6/query-anecdotes/db.json
 assignnments/part6/query-anecdotes/db.json
+assignnments/part7/final-proj-bloglist/backend/.env
